@@ -51,4 +51,7 @@ public class CLPaints {
     public static final Color EFIELD_DETECTOR_WIRE = Color.BLACK;
     public static final Color VOLTMETER_POSITIVE_WIRE = Color.RED;
     public static final Color VOLTMETER_NEGATIVE_WIRE = Color.BLACK;
+    
+    // debug
+    public static final Color MODEL_BOUNDS = Color.MAGENTA;
 }
