@@ -1,3 +1,5 @@
+11/11/10 make voltmeter read 0V when probes are touching
+11/11/10 add shapes for voltmeter probe tips
 11/11/10 add infrastructure for touching voltmeter probe tips together to display 0V
 11/11/10 specializations of Wire for connecting a battery to a capacitor
 11/11/10 specializations of WireSegment for connection to battery and capacitor, length changes dynamically
